java-angular-tomcat/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-angular-tomcat-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: test.local
      http:
        paths:
          - path: /iris
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /iris/client
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
